2000-10-27  Dave Peticolas  <dave@krondo.com>

	* src/calculation/expression_parser.c: handle (num) as -num.

2000-10-26  Dave Peticolas  <dave@krondo.com>

	* src/engine/util.c (DxaccParseAmount): handle (num) as -num.

2000-10-23  Rob Browning  <rlb@cs.utexas.edu>

	* src/scm/main.scm:
	(gnc:*batch-mode-things-to-do*): new var - keep track of startup bits.
	(gnc:main): add --load processing for "things-to-do".

	* src/scm/engine-utilities.scm:
	(gnc:filename->account-group): new - likely temporary.
	(gnc:call-with-account-data-from-file): new - likely temporary.

	* src/scm/command-line.scm (gnc:*arg-defs*): add --load option in
	addition to --evaluate.

	* src/engine/sql/PostgresBackend.c: handle changes in the rest of
	the code.

	* src/engine/kvp_frame.c: change the datatype a little to pull the
	union tag into the main struct.  Also update the functions and
	datatypes to more closely mirror glib types.  i.e. lists are now
	just GLists that must contain only kvp_value pointers.  The kvp
	docs have *not* been updated to reflect these changes (nor the
	changes listed below).
	(kvp_frame_set_slot): now setting a slot to a NULL value deletes
	the slot.  This is not in the docs yet.
	(init_frame_body_if_needed): new function - only initialize the
	guts of the kvp_frame if we need them.  This helps in some
	situations and should be free otherwise.  All the other functions
	should handle this properly now.
	(kvp_value_new_binary_nc): new function - create a new binary
	object using the pointer given directly.
	(kvp_frame_for_each_slot): new function.
	(kvp_value_compare): new function.
	(kvp_frame_compare): new function.

	* src/engine/kvp_frame.h: accomodate changes to kvp_frame.c.
	
	* src/engine/guid.c:
	(guid_compare): new function.
	(guid_hash_to_guint): hash function from glib.
	(guid_hash_table_new): new function.
	(guid_g_hash_table_equal): new function.

	* src/engine/guid.h: accomodate changes to guid.c.

	* src/engine/date.c: